исключил использование javax.xml.bind.DatatypeConverter - запуск под JDK 11